            - reload listview on tab 4 on clicked event of checkbox_activate
            - reload listview on tab 4 + 5 on selected event of choicectrl_category
            - fixed issue where rulename was shorten to18 instead of 15 characters on "make_treebook_page()"
            - changed kill focus event of rulename textctrl to only show "dialog.info()" on tab 3
            - changed style and behavior of blacklist / whitelist window
        - tab 4:
            - replaced rules_listbox elements with rules_listview
            - added check to enable/disable delete + clone button on rules_listview selection event + "unprotect_hub_values()"
            - added status text on rulename has changed to display if new name is unique or not
            - added column "active" and "category" to rules listview
            - changed width of listview
            - changed listview header names to values from "table.getRules()" key list
            - changed "rules_listview_create()" to auto fill values to table without calling "rules_listview_fill()" seperate
            - changed announcing path wxDirPickerCtrl default
            - changed dirpicker_path:wxEVT_KILL_FOCUS to update path for dirpicker
            - changed dirpicker:wxEVT_COMMAND_DIRPICKER_CHANGED to update path for dirpicker
            - changed status uf "add" button to disable when rulename already exists
        - tab 5:
            - replaced categories_listbox elements with categories_listview
            - added column to show how many times the category name exists on the rules table
            - added check to enable/disable delete button on categories_listview selection event + "unprotect_hub_values()"
            - added import + export button
            - added status text on categoryname has changed to display if new name is unique or not
            - changed width of listview
            - changed listview header names to values from "table.getCategories()" key list